--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           publish: true
           imageName: charlieethan/naiveproxy
+          dockerFile: Dockerfile
           platform: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           tag: latest
           dockerHubUser: ${{ secrets.DOCKER_USERNAME }}
