--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,13 +8,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Publish to Dockerhub
-        uses: ilteoood/docker_buildx@1.0.4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          publish: true
-          imageName: charlieethan/naiveproxy
-          dockerFile: Dockerfile
-          platform: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
-          tag: latest
-          dockerHubUser: ${{ secrets.DOCKER_USERNAME }}
-          dockerHubPassword: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          push: true
+          tags: |
+            charlieethan/naiveproxy:latest
