--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         with: 
           go-version: 1.15.x
         env:
-          GOPATH: $HOME
+          GOPATH: "$HOME"
            
       - name: Get code
         run: |
