--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,13 @@ jobs:
         uses: actions/setup-go@v2
         with: 
           go-version: 1.15.x
-        env:
-          GOPATH: "$HOME"
-           
+      
+      - name: Setup Go PATH
+        run: |
+          export GOROOT=/usr/local/go
+          export GOPATH=$HOME/go
+          export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
+
       - name: Get code
         run: |
           git clone -b naive https://github.com/klzgrad/forwardproxy
@@ -31,7 +35,7 @@ jobs:
 
       - name: Build linux-386
         run: |
-          env GOOS=linux GOARCH=386 $HOME/bin/xcaddy build --output $PWD/caddy-linux-386 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          env GOOS=linux GOARCH=386 $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-386 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-386
       - name: Release linux-386
         uses: actions/upload-release-asset@v1.0.2
@@ -47,7 +51,7 @@ jobs:
         env:
           GOPATH: $PWD/go
         run: |
-          env GOOS=linux GOARCH=amd64 $HOME/bin/xcaddy build --output $PWD/caddy-linux-amd64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          env GOOS=linux GOARCH=amd64 $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-amd64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-amd64
       - name: Release linux-amd64
         uses: actions/upload-release-asset@v1.0.2
@@ -63,7 +67,7 @@ jobs:
         env:
           GOPATH: $PWD/go
         run: |
-          env GOOS=linux GOARCH=arm GOARM=6 $HOME/bin/xcaddy build --output $PWD/caddy-linux-arm32-v6 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          env GOOS=linux GOARCH=arm GOARM=6 $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-arm32-v6 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-arm32-v6
       - name: Release linux-arm32-v6
         uses: actions/upload-release-asset@v1.0.2
@@ -79,7 +83,7 @@ jobs:
         env:
           GOPATH: $PWD/go
         run: |
-          env GOOS=linux GOARCH=arm GOARM=7 $HOME/bin/xcaddy build --output $PWD/caddy-linux-arm32-v7 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          env GOOS=linux GOARCH=arm GOARM=7 $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-arm32-v7 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-arm32-v7
       - name: Release linux-arm32-v7
         uses: actions/upload-release-asset@v1.0.2
@@ -95,7 +99,7 @@ jobs:
         env:
           GOPATH: $PWD/go
         run: |
-          env GOOS=linux GOARCH=arm64 $HOME/bin/xcaddy build --output $PWD/caddy-linux-arm64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          env GOOS=linux GOARCH=arm64 $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-arm64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-arm64
       - name: Release linux-arm64
         uses: actions/upload-release-asset@v1.0.2
@@ -111,7 +115,7 @@ jobs:
         env:
           GOPATH: $PWD/go
         run: |
-          env GOOS=linux GOARCH=ppc64le $HOME/bin/xcaddy build --output $PWD/caddy-linux-ppc64le HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          env GOOS=linux GOARCH=ppc64le $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-ppc64le HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-ppc64le
       - name: Release linux-ppc64le
         uses: actions/upload-release-asset@v1.0.2
@@ -127,7 +131,7 @@ jobs:
         env:
           GOPATH: $PWD/go
         run: |
-          env GOOS=linux GOARCH=s390x $HOME/bin/xcaddy build --output $PWD/caddy-linux-s390x HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          env GOOS=linux GOARCH=s390x $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-s390x HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-s390x
       - name: Release linux-s390x
         uses: actions/upload-release-asset@v1.0.2
