--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,16 +4,19 @@ on:
       - "v*"
 
 name: release-build
-env: 
-  GOPATH: "$HOME/go"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Install Golang
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v1
         with: 
           go-version: 1.15.x
+      - name: setup env
+        run: |
+         echo "::set-env name=GOPATH::$(go env GOPATH)"
+         echo "::add-path::$(go env GOPATH)/bin"
+        shell: bash
 
       - name: Get code
         run: |
