--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,19 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Golang
-        uses: actions/setup-go@v1
-        with: 
-          go-version: 1.15.x
-          
-      - name: Debug
         run: |
-         pwd
-         echo ${HOME}
-         echo ${GITHUB_WORKSPACE}
-         echo ${GOPATH}
-         echo ${GOROOT}
-        env:
-         GOPATH: /home/runner/work/woodpecker/go
+          wget https://golang.org/dl/go1.15.2.linux-amd64.tar.gz && tar -zxvf go1.15.2.linux-amd64.tar.gz && rm -rf go1.15.2.linux-amd64.tar.gz
+          mv go /usr/local
+          cat << 'EOF' >> ~/.bashrc
+          export GOROOT=/usr/local/go
+          export GOPATH=$HOME/go
+          export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
+          EOF
+          mkdir $HOME/go && source ~/.bashrc
 
       - name: Get code
         run: |
