--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,9 +46,10 @@ jobs:
 
       - name: Build linux-amd64
         env:
-          GOPATH: $PWD/go
+          GOOS: linux
+          GOARCH: amd64
         run: |
-          env GOOS=linux GOARCH=amd64 xcaddy build --output $PWD/caddy-linux-amd64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          ./xcaddy build --output $PWD/caddy-linux-amd64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-amd64
       - name: Release linux-amd64
         uses: actions/upload-release-asset@v1.0.2
@@ -62,9 +63,11 @@ jobs:
 
       - name: Build linux-arm32-v6
         env:
-          GOPATH: $PWD/go
+          GOOS: linux
+          GOARCH: arm
+          GOARM: 6
         run: |
-          env GOOS=linux GOARCH=arm GOARM=6 xcaddy build --output $PWD/caddy-linux-arm32-v6 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          ./xcaddy build --output $PWD/caddy-linux-arm32-v6 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-arm32-v6
       - name: Release linux-arm32-v6
         uses: actions/upload-release-asset@v1.0.2
@@ -78,9 +81,11 @@ jobs:
 
       - name: Build linux-arm32-v7
         env:
-          GOPATH: $PWD/go
+          GOOS: linux
+          GOARCH: arm
+          GOARM: 7
         run: |
-          env GOOS=linux GOARCH=arm GOARM=7 xcaddy build --output $PWD/caddy-linux-arm32-v7 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          ./xcaddy build --output $PWD/caddy-linux-arm32-v7 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-arm32-v7
       - name: Release linux-arm32-v7
         uses: actions/upload-release-asset@v1.0.2
@@ -94,9 +99,10 @@ jobs:
 
       - name: Build linux-arm64
         env:
-          GOPATH: $PWD/go
+          GOOS: linux
+          GOARCH: arm64
         run: |
-          env GOOS=linux GOARCH=arm64 xcaddy build --output $PWD/caddy-linux-arm64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          ./xcaddy build --output $PWD/caddy-linux-arm64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-arm64
       - name: Release linux-arm64
         uses: actions/upload-release-asset@v1.0.2
@@ -110,9 +116,10 @@ jobs:
 
       - name: Build linux-ppc64le
         env:
-          GOPATH: $PWD/go
+          GOOS: linux
+          GOARCH: ppc64le
         run: |
-          env GOOS=linux GOARCH=ppc64le xcaddy build --output $PWD/caddy-linux-ppc64le HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          ./xcaddy build --output $PWD/caddy-linux-ppc64le HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-ppc64le
       - name: Release linux-ppc64le
         uses: actions/upload-release-asset@v1.0.2
@@ -126,9 +133,10 @@ jobs:
 
       - name: Build linux-s390x
         env:
-          GOPATH: $PWD/go
+          GOOS: linux
+          GOARCH: s390x
         run: |
-          env GOOS=linux GOARCH=s390x xcaddy build --output $PWD/caddy-linux-s390x HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+         ./xcaddy build --output $PWD/caddy-linux-s390x HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
           chmod +x caddy-linux-s390x
       - name: Release linux-s390x
         uses: actions/upload-release-asset@v1.0.2
