--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,15 +2,17 @@ on:
   watch:
     types: started
   push:
-    tags: 
-      - "v*"
+    branches: 
+      - 'master'
+    paths-ignore:
+      - 'src'
+      - '**.md'
+      - '**.yml'
 
 name: release-build
 jobs:
   build:
     runs-on: ubuntu-latest
-    env: 
-     TZ: Asia/Hong_Kong
     steps:
 
       - name: Install Golang
@@ -20,6 +22,7 @@ jobs:
 
       - name: Setup variables
         run: |
+          echo "::set-env name=VERSION::$(wget --no-check-certificate -qO- https://raw.githubusercontent.com/ymcoming/caddy2-naiveproxy/master/version | head -1)"
           echo "::set-env name=GOPATH::$(dirname $GITHUB_WORKSPACE)"
           echo "::add-path::$(dirname $GITHUB_WORKSPACE)/bin"
         shell: bash
@@ -28,22 +31,22 @@ jobs:
         run: |
           go get -u github.com/caddyserver/xcaddy/cmd/xcaddy
           git clone -b naive https://github.com/klzgrad/forwardproxy
-
+          git clone https://github.com/mastercactapus/caddy2-proxyprotocol.git
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.1.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
+          tag_name: ${{ env.VERSION }}
+          release_name: ${{ env.VERSION }}
 
       - name: Build linux-amd64
         env:
           GOOS: linux
           GOARCH: amd64
         run: |
-          $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-amd64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
+          $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-amd64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy --with github.com/mastercactapus/caddy2-proxyprotocol=$PWD/caddy2-proxyprotocol
           chmod +x caddy-linux-amd64
       - name: Release linux-amd64
         uses: actions/upload-release-asset@v1.0.2
@@ -53,4 +56,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./caddy-linux-amd64
           asset_name: caddy-linux-amd64
-          asset_content_type: application/zip 
+          asset_content_type: application/zip
