--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,52 +10,25 @@ on:
 
 name: release-build
 jobs:
-  build:
+  update:
+    if: github.repository == 'azples/caddys'
     runs-on: ubuntu-latest
     steps:
-
-      - name: Install Golang
-        uses: actions/setup-go@v2
-        with: 
-         go-version: 1.15.x
-
-      - name: Setup variables
-        run: |
-          echo "VERSION=${{ 'caddy_test' }}" >> $GITHUB_ENV
-          echo "GOPATH=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
-          echo "$(dirname $GITHUB_WORKSPACE)/bin" >> $GITHUB_PATH
-        shell: bash
-
-      - name: Setup xcaddy
-        run: |
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.*' # The Go version to download (if necessary) and use.
+      - run: |
+            export PATH=${GOROOT}/bin:$PATH
+            go version
             go install github.com/caddyserver/xcaddy/cmd/xcaddy@latest
             xcaddy build latest \
                 --with github.com/mholt/caddy-l4 \
                 --with github.com/caddy-dns/cloudflare \
                 --with github.com/caddyserver/forwardproxy@caddy2=github.com/klzgrad/forwardproxy@naive
-           
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1.1.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.VERSION }}
-          release_name: ${{ env.VERSION }}
-
-      - name: Build linux-amd64
-        env:
-          GOOS: linux
-          GOARCH: amd64
-        run: |
-          $GOPATH/bin/xcaddy build --output $PWD/caddy-linux-amd64 HEAD --with github.com/caddyserver/forwardproxy=$PWD/forwardproxy
-          chmod +x caddy-linux-amd64
-      - name: Release linux-amd64
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./caddy-linux-amd64
-          asset_name: caddy2
-          asset_content_type: application/zip
+            tar -czvf caddy.tar.gz caddy
+            rm -f caddy
+            # push
+            git config --local user.email "action@github.com" && git config --local user.name "GitHub Action"
+            git commit -am "update"
+            git push -v --progress
