Update and rename .github/workflows/build.yml to .github/update.yml

--- a/.github/update.yml
+++ b/.github/update.yml
@@ -1,12 +1,10 @@
 on:
   watch:
   push:
-    branches: 
-      - 'master'
-    paths-ignore:
-      - 'src'
-      - '**.md'
-      - '**.yml'
+    branches:
+      - main
+    paths:
+      - ".github/workflows/update.yml"
 
 name: release-build
 jobs:
