--- a/.github/update.yml
+++ b/.github/update.yml
@@ -5,10 +5,10 @@ on:
       - main
     paths:
       - ".github/workflows/update.yml"
-
+name: update
 jobs:
   update:
-    if: github.repository == 'ymcoming/caddy2-naiveproxy'
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
